Implemented creating orders, matching orders, UI of the orderbook and integrated all that into main program.